--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,19 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "brain-games - these are five games with simple math problems"
 authors = ["Konstantin Kiselev <konstantin.kiselev.1998@mail.ru>"]
 readme = "README.md"
+repository = 'https://github.com/Kostyanuch-c/python-project-49.git'
+classifiers = [
+    'Development Status :: 4 - Beta',
+    'Environment :: Console',
+    'Intended Audience :: Developers',
+    'Programming Language :: Python',
+]
+
 packages = [
-  { include = "brain_games" },
+    { include = "brain_games" },
 ]
 
 [tool.poetry.dependencies]
@@ -19,7 +27,7 @@ brain-calc = "brain_games.scripts.brain_calc:main"
 brain-gcd = "brain_games.scripts.brain_gcd:main"
 brain-progression = "brain_games.scripts.brain_progression:main"
 brain-prime = "brain_games.scripts.brain_prime:main"
- 
+
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
 
