--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ brain-calc = "brain_games.scripts.brain_calc:main"
 brain-gcd = "brain_games.scripts.brain_gcd:main"
 brain-progression = "brain_games.scripts.brain_progression:main"
 brain-prime = "brain_games.scripts.brain_prime:main"
-
+brain-games-TUI = "brain_games.scripts.brain_games_TUI:main"
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
 
